# Review-Quantum-Diffusion-Models

./: .dockerignore  .env.example  .gitignore  .zenodo.json  CHANGES.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  README.pt-BR.md  apply_patches.py  extend_search_config.py  pyproject.toml  requirements-lock.txt  requirements.txt
configs/: screening_reasons.yaml  search_config.yaml  search_config_full.yaml  search_config_smoke.yaml
data/legacy_notebook/: arxiv_original_all.csv  arxiv_original_filtered.csv  arxiv_original_filtered.xlsx
data/processed/: all_retrieved_records.parquet  all_source_records.csv  all_source_records.parquet  all_unique_records.parquet  core_source_records.csv  core_unique_candidates.csv  deduplicated_records.csv  deduplicated_records.parquet  deduplication_decisions.csv  (+18 more)
docs/: data_dictionary.md  limitations.md  methodology.md  original_notebook_assessment.md  repository_release.md  reproducibility.md  search_strategy.md
notebooks/: 01_reproducible_literature_search.ipynb
reports/: final_screening_report.md  legacy_notebook_reconciliation.csv  methods_text.md  prisma_flow_counts.csv  run_summary.json  search_log.csv  search_report.md  selection_flow.md
scripts/: execute_notebook.py  generate_report.py  run_search.py  validate_results.py
tests/: test_apply_screening.py  test_arxiv_parser.py  test_classification.py  test_crossref_parser.py  test_deduplication.py  test_legacy_reconciliation.py  test_normalization.py  test_rate_limit_resume.py  test_relevance.py  test_selection_counts.py  test_smoke_config.py
(+167 files in other folders)
