[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-diffusion-literature-search"
version = "0.1.0"
description = "Reproducible literature-search pipeline for quantum diffusion models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TODO: add author name"}]
dependencies = [
  "requests>=2.31,<3",
  "feedparser>=6.0,<7",
  "pandas>=2.0,<3",
  "pyarrow>=14,<22",
  "openpyxl>=3.1,<4",
  "pyyaml>=6,<7",
  "tqdm>=4.66,<5",
  "tenacity>=8,<10",
  "rapidfuzz>=3,<4",
  "pydantic>=2,<3",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "responses>=0.25,<1",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "nbformat>=5.10,<6",
  "nbconvert>=7,<8",
  "ipykernel>=6,<7",
  "tabulate>=0.9,<1",
]

[project.scripts]
quantum-diffusion-search = "quantum_diffusion_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140
target-version = "py310"
extend-exclude = ["notebooks/legacy/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
